# hickleable

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  LICENSE  README.md  README.rst  setup.cfg
.github/workflows/: deploy.yaml  testsuite.yaml
docs/: conf.py  environment.yaml  index.rst  installation.rst  tutorials.rst  usage.rst  usage_overview.rst
docs/faqs/: misc.rst
docs/reference/: index.rst
src/hickleable/: __init__.py
tests/: test_hickleable.py  test_yaml.py
